syntax = "proto3";

package com.hlebon.betpawa.protos;

option java_multiple_files = true;
option java_package = "com.hlebon.betpawa.protos";

message VoidResponse {
    Error error = 1;
}

message Error {
    string message = 1;
}

